--- a/style.css
+++ b/style.css
@@ -6,11 +6,16 @@ ul {
     background-color: #333;
     display: flex;
     text-align: center;
-    
-    
+
+  
+
+
 }
-.nav{
+
+.nav {
+    /* margin: auto; */
     position: sticky;
+    top: 0;
 
 }
 
@@ -39,7 +44,7 @@ li a:hover {
     color: #333;
 }
 
-marquee {
+.flow marquee  {
     padding-top: 2vh;
     scroll-behavior: auto;
 
@@ -88,3 +93,37 @@ marquee {
     color: green;
 
 }
+
+/* .left{
+    display: flexbox;
+    flex-direction: column;
+flex-wrap: wrap-reverse;
+} */
+span {
+    /* border: 3px solid red; */
+    font-size: 7vh;
+    margin-left: 2vw;
+    margin-bottom: -12vh;
+}
+
+span:first-of-type {
+
+    height: 0vh;
+
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+}
+
+img {
+    position: relative;
+    width: 15vw;
+    margin-bottom: -10%;
+
+}
+
+#right {
+
+    float: right;
+}
+
+
