--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ ul {
     background-color: #333;
     display: flex;
     text-align: center;
+    padding-left: 5%;
 
   
 
@@ -16,12 +17,15 @@ ul {
     /* margin: auto; */
     position: sticky;
     top: 0;
+    text-align: center;
+    
 
 }
 
 li {
     padding-left: 10vw;
     float: left;
+    text-align: center;
 }
 
 li a {
@@ -33,7 +37,7 @@ li a {
     text-decoration: none;
     /* align-content: center; */
 
-
+text-align: center;
 
 }
 
